@@ -91,6 +91,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25718: Fixed pickling and copying the accumulate() iterator with
+  total is None.
+
 - Issue #26475: Fixed debugging output for regular expressions with the (?x)
   flag.
 
